--- a/package.json
+++ b/package.json
@@ -2,15 +2,19 @@
   "name": "managenow",
   "version": "0.0.1",
   "description": "Team and Project manager nodejs application",
-  "main": "home.js",
-  "dependencies": {
-    "express": "^4.13.3",
-    "mysql": "^2.10.0",
-    "winston": "^2.1.1"
-  },
-  "devDependencies": {},
+  "private": true,
   "scripts": {
-    "test": "mysql.js"
+    "start": "node ./bin/www"
+  },
+  "dependencies": {
+    "body-parser": "~1.13.2",
+    "cookie-parser": "~1.3.5",
+    "debug": "~2.2.0",
+    "express": "~4.13.1",
+    "jade": "~1.11.0",
+    "morgan": "~1.6.1",
+    "serve-favicon": "~2.3.0",
+	"mysql": "~2.10.0"
   },
   "repository": {
     "type": "git",
