--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "express": "~4.13.1",
     "morgan": "~1.6.1",
     "mysql": "~2.10.0",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "winston": "^2.1.1"
   },
   "repository": {
     "type": "git",
